--- a/src/index.html
+++ b/src/index.html
@@ -2,8 +2,16 @@
 <html lang="en">
 <head>
   <meta charset="utf-8">
-  <title>Hyperreality</title>
-  <base href="/">
+  <title>Гиперфаза</title>
+  <meta name="description" content="Обучение самым эффективным в мире методам медитации и погружения в осознанный сон."/>
+  <script async src="https://www.googletagmanager.com/gtag/js?id=G-V689ZVQESZ"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
+
+  gtag('config', 'G-V689ZVQESZ');
+</script>
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="icon" type="image/x-icon" href="favicon.ico">
 </head>
